<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/pick_card"
                style="@style/Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/uhrTitelView3">

                <TextView
                    android:id="@+id/textView9"
                    style="@style/Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blue_search_tooltip_search_title"
                    app:layout_constraintStart_toEndOf="@+id/feedbackView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blue_search_tooltip_all_devices"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/feedbackView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_chevron_right" />

                <leko.valmx.uhrenprojekt.util.ProcessFeedBackView
                    android:id="@+id/feedbackView"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@drawable/ic_bluetooth"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                </leko.valmx.uhrenprojekt.util.ProcessFeedBackView>

                <TextView
                    android:id="@+id/btn_search"
                    style="@style/Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/blue_search_start"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/feedbackView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_found_device"
                style="@style/Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pick_card"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/device_name"
                    style="@style/Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="WOWOW - Gefunden"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                    app:layout_constraintStart_toEndOf="@+id/imageView8"
                    app:layout_constraintTop_toTopOf="@+id/imageView8" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:tint="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_clock" />

                <TextView
                    android:id="@+id/connect"
                    style="@style/Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/blue_search_connect"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView8" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_success"
                style="@style/Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_found_device"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/circle"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_check"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/textView14"
                    style="@style/Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blue_search_title_success"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView9" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blue_search_tooltip_feedback"
                    app:layout_constraintEnd_toEndOf="@+id/textView14"
                    app:layout_constraintStart_toStartOf="@+id/textView14"
                    app:layout_constraintTop_toBottomOf="@+id/textView14" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <leko.valmx.uhrenprojekt.intro.title.UhrTitelView
                android:id="@+id/uhrTitelView3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/card"
                app:titel="@string/blue_search_title"
                tools:layout_editor_absoluteX="133dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>